// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should match snapshot and styles for default props 1`] = `
<DocumentFragment>
  <div>
    <input
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`Input should match snapshot with label 1`] = `
<DocumentFragment>
  <div>
    <label
      for="test"
    >
      Name:
    </label>
    <input
      id="test"
      type="text"
    />
  </div>
</DocumentFragment>
`;
